Add Pomodoro widget to config.yaml
Added a Pomodoro widget configuration to the YAML file.

--- a/yasb/config.yaml
+++ b/yasb/config.yaml
@@ -39,7 +39,7 @@ bars:
         alignment: "right"
         stretch: true
     widgets:
-      left: ["glazewm_workspaces"]
+      left: ["glazewm_workspaces", "pomodoro"]
 widgets:
   glazewm_workspaces:
     type: "glazewm.workspaces.GlazewmWorkspacesWidget"
@@ -55,4 +55,41 @@ widgets:
         hide_label: true
         hide_duplicates: false
         hide_floating: false
-
+  pomodoro:
+    type: "yasb.pomodoro.PomodoroWidget"
+    options:
+      label: "<span>{icon}</span> {remaining}"
+      label_alt: "<span>{icon}</span> {session}/{total_sessions} - {status}"
+      work_duration: 25
+      break_duration: 5
+      long_break_duration: 15
+      long_break_interval: 4
+      auto_start_breaks: true
+      auto_start_work: true
+      sound_notification: true
+      show_notification: true
+      hide_on_break: false
+      session_target: 8
+      icons:
+        work: "\uf017"
+        break: "\uf0f4"
+        paused: "\uf04b"
+      menu:
+        blur: true
+        round_corners: true
+        border_color: "System"
+        alignment: "center"
+        direction: "up"
+        offset_top: 6
+        offset_left: 0
+        circle_thickness: 8
+        circle_size: 160
+      callbacks:
+        on_left: "toggle_menu"
+        on_middle: "reset_timer"
+        on_right: "toggle_label"
+      label_shadow:
+        enabled: true
+        color: "black"
+        radius: 3
+        offset: [1, 1]
